feat: implement native mapping for other direction (java -> native)