@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
     implementation(kotlin("reflect"))
-    implementation("dev.silenium.libs.jni:jni-utils:0.4.1")
+//    implementation("dev.silenium.libs.jni:jni-utils:0.4.1")
     testImplementation(kotlin("test"))
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0")
 }
@@ -60,6 +60,7 @@ tasks {
 
     test {
         useJUnitPlatform()
+        jvmArgs("--enable-native-access=ALL-UNNAMED")
     }
 
     withType<Jar> {
